Add DescribeSubnets api
